--- a/src/components/WindowManager/WindowManager.scss
+++ b/src/components/WindowManager/WindowManager.scss
@@ -20,8 +20,105 @@
     height: 600px;
     min-width: 400px;
     min-height: 400px;
+    max-height: 1000px;
+    max-width: 1700px;
     display: flex;
     flex-direction: column;
+    isolation: isolate;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.226);
+
+    &.focused {
+      z-index: 999;
+    }
+
+    &.type-browser {
+      .titlebar {
+        justify-content: start;
+        gap: 10px;
+      }
+    }
+
+    .modal {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: 99;
+      isolation: isolate;
+      display: grid;
+      place-items: center;
+      pointer-events: none;
+      opacity: 0;
+      transition: opacity 0.25s ease;
+
+      &.active {
+        pointer-events: all;
+        opacity: 1;
+
+        .modal-content {
+          transform: translateY(0px);
+        }
+      }
+
+      .bg {
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.39);
+        position: absolute;
+        z-index: -1;
+      }
+
+      .modal-content {
+        background: var(--surface-0);
+        padding: 15px;
+        border-radius: var(--radius);
+        border: 1px solid var(--stroke-light);
+        max-width: 20rem;
+        transform: translateY(10px);
+        transition: transform 0.25s ease;
+
+        h3 {
+          margin-bottom: 10px;
+        }
+
+        form {
+          display: flex;
+          flex-direction: column;
+          gap: 5px;
+          margin-bottom: 5px;
+
+          input {
+            background: var(--surface-1);
+            border: 1px solid var(--stroke);
+            padding: 5px;
+            width: 100%;
+            border-radius: var(--radius);
+
+            &:focus {
+              border-color: var(--stroke-light);
+              outline: none;
+            }
+          }
+
+          .buttons {
+            display: flex;
+            gap: 5px;
+
+            button {
+              width: 100%;
+              background: var(--surface-2);
+              border-radius: var(--radius);
+              border: 1px solid var(--stroke-light);
+              padding: 5px;
+
+              &.submit {
+                background: var(--confirm);
+                border: var(--confirm-border);
+              }
+            }
+          }
+        }
+      }
+    }
 
     .titlebar {
       background: var(--surface-0);
@@ -42,7 +139,7 @@
         border-radius: 50%;
 
         &:hover {
-          filter: brightness(.8)
+          filter: brightness(0.8);
         }
       }
 
@@ -61,9 +158,53 @@
           }
         }
       }
+
+      .addbtn {
+        border: 1px solid var(--stroke);
+        background: var(--surface-2);
+        padding: 5px 10px;
+        border-radius: var(--radius);
+        cursor: pointer;
+
+        &:focus {
+          border-color: var(--stroke-light);
+          outline: none;
+        }
+
+        &:hover {
+          border-color: var(--stroke-light);
+        }
+
+        &:active {
+          transform: translateY(1px);
+        }
+      }
+      
+      .navBtn {
+        background: var(--surface-2);
+        border: 1px solid var(--stroke);
+        border-radius: var(--radius);
+        height: 100%;
+        display: grid;
+        place-items: center;
+        aspect-ratio: 1 / 1;
+
+        &:focus {
+          border-color: var(--stroke-light);
+          outline: none;
+        }
+
+        &:hover {
+          border-color: var(--stroke-light);
+        }
+
+        &:active {
+          transform: translateY(1px);
+        }
+      }
     }
 
-    iframe {
+    webview {
       width: 100%;
       height: 100%;
     }
